# ROS-Simulation-Autonomous-Driving

./: README.md
carolo/: CMakeLists.txt  package.xml  run_simulation.bash
carolo/config/: cc2019_car_control.yaml
carolo/launch/: carolo.launch  gazebo_urdf.launch
carolo/meshes/: hokuyo_urg04lx.dae  pepperl_fuchs_ml100.dae  wheel.dae
carolo/models/: camera.gazebo  lidar.gazebo  wheel.gazebo
carolo/models/carolo_track/: carolo_track.sdf  model.config
carolo/msg/: RemoteControl_itmoves.msg
carolo/plugins/: itmoves_car_plugin.cc
carolo/rviz/: carolo.rviz
carolo/urdf/: itmoves_car.urdf
carolo/worlds/: carolo.world
drive_gazebo_sim/: CMakeLists.txt  README.md  package.xml
drive_gazebo_sim/launch/: gazebo_urdf.launch
drive_gazebo_sim/meshes/: hull_collision.dae
drive_gazebo_sim/urdf/: cc2019.xacro  hokuyo_urg04lx.macro.xacro  hokuyo_urg04lx_gpu.macro.xacro  hokuyo_urg04lx_mechanical.macro.xacro  pepperl_fuchs_ml100_8_1000_RT.macro.xacro  ximea_MQ013MG-ON_SY110.macro.xacro
drive_gazebo_sim/worlds/: empty_world_no_friction.world
drive_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
drive_gazebo_worlds/launch/: cc_extended_world.launch
drive_gazebo_worlds/meshes/: Abbiegeschild.blend  Abbiegeschild_gross.blend  Abbiegeschild_gross_rechts.dae  AllQuadratic.blend  All_round.blend  Dreieckig_Steigung.blend  Links_abbiegen.blend  Rechts_abbiegen.blend  Stopschild.blend  VorbeifahrtRechts_pedestrian.blend  VorbeifahrtRechts_pedestrian.dae  Vorfahrt.blend  VorfahrtGewaehren.blend
drive_gazebo_worlds/worlds/: parking_world.sdf  world.sdf
drive_ros_gazebo_control/: CMakeLists.txt  package.xml
drive_ros_gazebo_control/launch/: gazebo_body_control.launch  gazebo_drive_state_publisher.launch  gazebo_odom_publisher.launch  preprocessing_simulation.launch  twist_to_autonomous_control.launch  twist_to_remote_control.launch
drive_ros_gazebo_control/msg/: DriveCommand_itmoves.msg  DriveState_itmoves.msg  Trajectory.msg
drive_ros_gazebo_control/scripts/: camcal-simulation.json  gazebo_publish_odom.py  visualization_simulation.py
drive_ros_gazebo_control/src/: gazebo_ros_body_control_node.cpp  gazebo_ros_drive_state_publisher_node.cpp  gazebo_ros_twist_to_autonomous_control.cpp  gazebo_ros_twist_to_remote_control.cpp
itmoves_msgs/: CMakeLists.txt  package.xml
itmoves_msgs/msg/: ego_vehicle_pose.msg  ego_vehicle_state.msg
realsense_gazebo_plugin/: CMakeLists.txt  package.xml
realsense_gazebo_plugin/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
realsense_gazebo_plugin/urdf/: d435_simulation.xacro  realsense-D435.macro.xacro
road_generation/: README.md  gazebo-renderer.py  requirements.txt  road-generator.py
road_generation/commonroad/: schema-extended.xsd  schema.py  schema_backup.py
road_generation/generated-roads/: road-driving-extended.xml  road-driving.xml  road-parking.xml
road_generation/presets/: labor_track.xml  round_track.xml  urban.xml
road_generation/tracks/: eight.xml  eight_adapted.xml  labor_track.xml  round_track.xml
teleop_twist_keyboard/: README.md
teleop_twist_keyboard/launch/: teleop_twist_keyboard.launch
(+477 files in other folders)
